fixtures/errors/for_await_non_iterable.js
async function run() {
  for await (let x of 42) {
    console.log(x);
  }
}
run();
